--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -129,14 +129,15 @@
                                 </TextBlock>
                             </StackPanel>
                         </Button>-->
-                        <Button Width="40" Height="80" BorderBrush="{x:Null}" Margin="25,150,0,50" Click="OutFoodClick" Style="{DynamicResource SquareButtonStyle}">
+                        <Button Width="40" Height="80" BorderBrush="{x:Null}" Margin="25,150,0,50" Click="OutFoodClick"
+                                Style="{DynamicResource SquareButtonStyle}">
                             <Button.Background>
-                                <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                <ImageBrush ImageSource="pic/tangdian.gif" />
                             </Button.Background>
 
                             <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40"
-                                           VerticalAlignment="Center">
-                                    外<LineBreak />卖
+                                       VerticalAlignment="Center">
+                                外<LineBreak />卖
                             </TextBlock>
                         </Button>
                     </StackPanel>
