--- a/WpfRestaurant/MessageWindow.xaml
+++ b/WpfRestaurant/MessageWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<controls:MetroWindow x:Class="WpfRestaurant.MessageWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfRestaurant"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        mc:Ignorable="d"
-        Title="通知" Height="200" Width="300" Closed="MessageWindow_OnClosed" ShowActivated="False">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:local="clr-namespace:WpfRestaurant"
+                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      mc:Ignorable="d"
+                      Title="通知" Height="200" Width="300" Closed="MessageWindow_OnClosed" ShowActivated="False">
     <Grid>
         <DockPanel>
-            <TextBlock x:Name="TextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"></TextBlock>
+            <TextBlock x:Name="TextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap" />
         </DockPanel>
     </Grid>
 </controls:MetroWindow>
